fix z-index for modals

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -11,7 +11,7 @@
     left: 0;
     background-color: #13182aeb;
     cursor: pointer;
-    z-index: 1;
+    z-index: 100;
 }
 
 .Modal{
